static/css/custom.css
body {
    background-color: #f5f5f5;
}

#main {
    min-height: calc(100vh - 254px);
    
}

.navbar-brand {
    font-family: 'Questrial', sans-serif;
    font-size: 1.3rem;
}

a.nav-link {
    font-size: 0.9rem;
}

div.messages-container {
    height: 34px;
    text-align: center;
}

.alert {
    padding: 0.4rem 1.25rem;
}

.alert-dismissible .close {
    padding: 0.25rem 1.25rem;
}

.brand-logo {
    max-width: 360px;
}

.fixed-width-btn {
    width: 102px;
}

.fab {
    font-size: 1.4rem;
}

.footer-links li a {
    color: #eee;
    font-weight: 300;
}

.user-logo {
    width: 160px;
    -webkit-filter: opacity(60%);
    filter: opacity(60%);
}

.detail-container {
    background-color: #fff;
    border: 1px solid #ddd;
    margin: 0 auto;
}

.button-container {
    width: max-content;
    margin-left: auto;
}

.form-container {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: auto;
}

.table {
    background-color: #fff;
}

div p.main-text {
    line-height: 1.8rem;
    word-spacing: 0.1rem;
}

.issue-badge-pill {
    height: 20px;
    font-size: 0.75rem;
    font-weight: 500;
}

.heading-border {
    border-color: #c3c3c3 !important;
}

.fa-chevron-down:before {
    color: #ccc;
}

.vote-btn {
    cursor: pointer;
}

.fas.fa-thumbs-up:before {
    color: #17a2b8;
}


/* Utility Classes */

.text-slim {
    font-weight: 300;
}

table .w-10 { 
    width: 10%;
}

table .w-15 { 
    width: 15%;
}

table .w-20 { 
    width: 20%;
}

table .w-25 { 
    width: 25%;
}

table .w-40 { 
    width: 40%;
}

table .w-50 { 
    width: 50%;
}

 /* Media Queries  */

@media (max-width: 767px) {
    .xs-center { text-align: center; }
}

